tests/spec/build/snapshots/generated_fmt_import_coexists_with_private_fmt_function.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Thing struct {
	X int
}

func (t Thing) String() string {
	return fmt.Sprintf("Thing { x: %v }", t.X)
}

func (t Thing) toString() string {
	return t.String()
}

func fmt_() int {
	return 1
}

func main() {
	_ = Thing{X: 1}
	fmt_()
}
