tests/spec/build/snapshots/generated_fmt_requirement_reuses_unaliased_source_import.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

func main() {
	fmt.Println("direct")
	s := fmt.Sprint(1)
	_ = s
}
