tests/spec/build/snapshots/generic_struct_adapter_substitutes_and_deduplicates_per_instantiation.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Entry[T any] struct {
	value T
}

type Cache[T any] interface {
	Get(string) (*Entry[T], bool)
}

type MyCache[T any] struct {
	entry Entry[T]
}

func (m MyCache[T]) Get(_ string) *Entry[T] {
	return nil
}

func useInt(_ Cache[int]) {}

func useString(_ Cache[string]) {}

func main() {
	ci := MyCache[int]{entry: Entry[int]{value: 1}}
	cs := MyCache[string]{entry: Entry[string]{value: "x"}}
	useInt(_lisAdapter_MyCache_Cache_0{inner: ci})
	useString(_lisAdapter_MyCache_Cache_1{inner: cs})
}

type _lisAdapter_MyCache_Cache_0 struct {
	inner MyCache[int]
}

func (a _lisAdapter_MyCache_Cache_0) Get(arg0 string) (*Entry[int], bool) {
	raw := a.inner.Get(arg0)
	option := lisette.OptionFromNilable[*Entry[int]](raw, raw == nil)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return nil, false
}

type _lisAdapter_MyCache_Cache_1 struct {
	inner MyCache[string]
}

func (a _lisAdapter_MyCache_Cache_1) Get(arg0 string) (*Entry[string], bool) {
	raw := a.inner.Get(arg0)
	option := lisette.OptionFromNilable[*Entry[string]](raw, raw == nil)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return nil, false
}
