tests/spec/build/snapshots/go_cross_package_type_alias_imports.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"io/fs"
	"os"
)

func main() {
	ret, ret_1 := os.Stat("/tmp")
	var result lisette.Result[fs.FileInfo, error]
	if ret_1 != nil {
		result = lisette.MakeResultErr[fs.FileInfo, error](ret_1)
	} else if lisette.IsNilInterface(ret) {
		result = lisette.MakeResultErr[fs.FileInfo, error](errors.New("unexpected nil"))
	} else {
		result = lisette.MakeResultOk[fs.FileInfo, error](ret)
	}
	if result.Tag == lisette.ResultOk {
		size := result.OkVal.Size()
		fmt.Printf("size: %d\n", size)
	} else {
		msg := result.ErrVal.Error()
		fmt.Printf("error: %s\n", msg)
	}
}
