tests/spec/build/snapshots/go_delegated_receiver_mutation_accepted_with_let_mut.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"sort"
)

func main() {
	s := sort.IntSlice([]int{3, 1, 2})
	s.Sort()
	fmt.Println(s)
}
