tests/spec/build/snapshots/go_derived_mut_param_accepted_with_let_mut.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "slices"

func main() {
	nums := []int{3, 1, 2}
	slices.Sort(nums)
	items := []int{1, 1, 2}
	slices.Reverse(items)
}
